[tool.poetry]
name = "mp4combine-2.5.0"
version = "0.1.0"
description = ""
authors = ["Sverrir Sigmundarson", "felciano <407700+felciano@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.4.0"
colorama = "^0.4.5"
termcolor = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
